# gitlab-ci-local-python

./: LICENSE  README.md  pyproject.toml
src/gitlab_ci_local_python/: __main__.py  _env.py  _op.py
src/gitlab_ci_local_python/data/: __init__.py  package.json
